2015-09-03  Charlie Zender  <zender@uci.edu>

	* Add hackish sixth argument 'yyyymm' to -n option to generate filenames in YYYYMM format

2015-08-31  Charlie Zender  <zender@uci.edu>

	* Change from spherical law of cosines to haversine formula for	great circle arc length

2015-08-30  Charlie Zender  <zender@uci.edu>

	* Change output grid area name from "area" to "grid_area" for ESMF_RegridWeightGen

2015-08-27  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.2-beta2 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.2-beta2 final changes';git push
	git tag -a 4.5.2-beta2 -m 'Version 4.5.2-beta2 tag: New metadata names for climo, new typenames for grid generation, Gaussian fix, GitHub relocation';git push --tags

	* Add regional grid-generation capability (lon_wst,lon_est,lat_sth,lat_nrt)

2015-08-25  Charlie Zender  <zender@uci.edu>

	* Fix ncdiff typo in manual thanks to Dave Allured

	* Allow user input of lon_srt, lon_end, lat_srt, lat_end

	* Fix off-by-one error in nco_bsl_zro() that broke spectral grids when lat_nbr > 100

	* Change rgr metadata mapping_file -> map_file and source_file -> input_file

2015-08-24  Charlie Zender  <zender@uci.edu>

	* Transfer ownership to new NCO GitHub Organization http://github.com/nco/nco.git

	* NCO 4.5.2-beta1 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.2-beta1 final changes';git push
	git tag -a 4.5.2-beta1 -m 'Version 4.5.2-beta1 tag: Diagnose area on bilinearly-interpolated 1D grids with LHuillier's formula';git push --tags

	* Areas of random gridcell (ncol=0) from NCO diagnosis and raw native grid output are
        4.396773732788860e-05 and 4.396773732840130e-05, respectively.
	Relative agreement is 0.99999999998833917706 within tolerance of 1.0e-10.

	* NCO-diagnosed ne30 global area exactly equals original (native grid) ne30 global area = 12.5663706144 sr
	These global areas equal 4*pi within fractional tolerance of 1.0e-13.
